--- a/Trululu.web/Trululu.web.csproj
+++ b/Trululu.web/Trululu.web.csproj
@@ -8,7 +8,7 @@
     <Folder Include="Controllers\" />
     <Folder Include="ActionResults\" />
     <Folder Include="Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Entities\" />
     <Folder Include="Filters\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
