--- a/Trululu.web/Trululu.web.csproj
+++ b/Trululu.web/Trululu.web.csproj
@@ -14,6 +14,8 @@
     <Folder Include="Filters\" />
     <Folder Include="ViewModels\" />
     <Folder Include="wwwroot\" />
+    <Folder Include="Views\Shared\" />
+    <Folder Include="wwwroot\styles\" />
   </ItemGroup>
 
   <ItemGroup>
