--- a/Trululu.web/Trululu.web.csproj
+++ b/Trululu.web/Trululu.web.csproj
@@ -11,14 +11,11 @@
 
   <ItemGroup>
     <Folder Include="ActionResults\" />
-<<<<<<< HEAD
     <Folder Include="Filters\" />
     <Folder Include="ViewModels\" />
     <Folder Include="wwwroot\" />
     <Folder Include="Views\Shared\" />
     <Folder Include="wwwroot\styles\" />
-=======
->>>>>>> develop
   </ItemGroup>
 
   <ItemGroup>
@@ -30,5 +27,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\css\contact.css" />
+    <Content Remove="wwwroot\css\home.css" />
   </ItemGroup>
 </Project>
