--- a/Trululu.web/Trululu.web.csproj
+++ b/Trululu.web/Trululu.web.csproj
@@ -13,9 +13,7 @@
     <Folder Include="ActionResults\" />
     <Folder Include="Filters\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="wwwroot\" />
     <Folder Include="Views\Shared\" />
-    <Folder Include="wwwroot\styles\" />
     <Folder Include="Areas\Identity\Pages\" />
   </ItemGroup>
 
@@ -29,6 +27,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="MimeKit" Version="2.5.1" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\css\contact.css" />
