DEV - Met à jour les fichiers de migrations

--- a/Trululu.web/Trululu.web.csproj
+++ b/Trululu.web/Trululu.web.csproj
@@ -17,6 +17,7 @@
     <Folder Include="Views\Shared\" />
     <Folder Include="wwwroot\styles\" />
     <Folder Include="Areas\Identity\Pages\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
